--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://stephanam.github.io/",
   "name": "react-interview",
   "version": "1.0.0",
   "private": true,
@@ -8,6 +9,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "materialize-css": "^0.98.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -15,6 +17,8 @@
     "redux": "^3.7.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
